<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/map_bottom_nav"
        android:title="@string/map_bottom_nav"
        android:icon="@drawable/ic_baseline_map_24"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/sport_items_bottom_nav"
        android:title="@string/sport_list_bottom_nav"
        android:icon="@drawable/ic_baseline_filter_list_24"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/chat_items_bottom_nav"
        android:title="@string/chat"
        android:icon="@drawable/ic_baseline_chat_24"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/profile_bottom_nav"
        android:title="@string/profile_bottom_nav"
        android:icon="@drawable/ic_baseline_assignment_ind_24"
        app:showAsAction="ifRoom"/>


</menu>